--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -9,7 +9,7 @@
         android:title="Sign Out"
         app:showAsAction="never"/>
     <item
-        android:id="@+id/scxewoh"
+        android:id="@+id/settings"
         android:title="Account Settings"
         app:showAsAction="never"/>
     <item
